Revert "no need for Starter-Code branch"

--- a/index.html
+++ b/index.html
@@ -12,60 +12,7 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <section class="card" id="html-section">
-        <h2>HTML</h2>
-        <p>Hyper Text Markup Language</p>
-        <ul>
-					<li>HTML is the basic building blocks of websites</li>
-					<li>It is made up of elements to provide content and the basic framework of all pages on the web</li>
-					<li>!DOCTYPE is a declaration that tell the browser what type of document it should expect when it is opened.</li>
-					<li> HTML Attributes are always defined at the beginning. They define additional information about elements.</li>
-			  </ul>
-				<h3>Elements</h3>
-				<ul>
-					<li>The head element contains information or metadata about the webpage.</li>
-	          <ul>
-						<li>Sample metadata tags include: title, style, base, link, meta, and script.</li>
-						</ul>
-					<li>The body element contains the content that is shown to a user.</li>
-						<ul>
-						<li>Elements contained inside body include:</li>
-							<ul>
-							<li>Heading Element: H1 H2 H3 H4 H5 H6
-							<li>Paragraph Element: P </li>
-							<li>List Element: ul ol li</li>
-							<li>Image Element: img</li>
-							<li>line breaks: br</li>
-							<li>Anchor (hyperlink) - a</li>
-							</ul>	
-        </ul>
-      </section>
-   
-      <section class="card" id="css-section">
-        <h2>CSS</h2>
-				<p>Cascading Style Sheets</p>
-				<p>The Language used to describe the presentation of a website that was created with HTML and how each element on a webpage is rendered.</p>
-        <ul>
-					<li>CSS describes the presentation of a website created with HTML</li>
-					<li>CSS describes how each element on a webpage is rendered</li>
-					</ul> 
-      </section>
-   
-      <section class="card" id="git-section">
-        <h2>Git</h2>
-        <ul>
-          <li>A free open source version conttrol system that allows collaboration without overwriting</li>
-          <li>It allows developers to revert to an older version of the code if an error happens</li>
-        </ul> 
-      </section>
-   
-      <section class="card" id="javascript-section">
-        <h2>Git</h2>
-        <ul>
-          <li>A free open source version conttrol system that allows collaboration without overwriting</li>
-          <li>It allows developers to revert to an older version of the code if an error happens</li>
-        </ul> 
-      </section>
+      <!-- Student code goes here -->
     </main>
 
     <footer>
