added CSS to project

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Prework Study Guide</title>
   </head>
   <body>
@@ -14,56 +15,64 @@
     <main>
       <section class="card" id="html-section">
         <h2>HTML</h2>
-        <p>Hyper Text Markup Language</p>
+        <br>
         <ul>
+					<li>Hyper Text Markup Language</li>
 					<li>HTML is the basic building blocks of websites</li>
 					<li>It is made up of elements to provide content and the basic framework of all pages on the web</li>
 					<li>!DOCTYPE is a declaration that tell the browser what type of document it should expect when it is opened.</li>
 					<li> HTML Attributes are always defined at the beginning. They define additional information about elements.</li>
 			  </ul>
+        <br>
 				<h3>Elements</h3>
 				<ul>
-					<li>The head element contains information or metadata about the webpage.</li>
+					<li>The <code>&lt;head&gt;</code> element contains information or <b>metadata</b> about the webpage.</li>
 	          <ul>
-						<li>Sample metadata tags include: title, style, base, link, meta, and script.</li>
+						<li>Sample metadata tags include: <code>&lt;title&gt;</code> <code>&lt;style&gt;</code> <code>&lt;base&gt;</code> <code>&lt;link&gt;</code> <code>&lt;meta&gt;</code> <code>&lt;script&gt;</code></li>
 						</ul>
-					<li>The body element contains the content that is shown to a user.</li>
+					<li>The <code>&lt;body&gt;</code> element contains the content that is shown to a user.</li>
 						<ul>
-						<li>Elements contained inside body include:</li>
+						<li>Elements contained inside <code>&lt;body&gt;</code> include:</li>
 							<ul>
-							<li>Heading Element: H1 H2 H3 H4 H5 H6
-							<li>Paragraph Element: P </li>
-							<li>List Element: ul ol li</li>
-							<li>Image Element: img</li>
-							<li>line breaks: br</li>
-							<li>Anchor (hyperlink) - a</li>
+							<li><b>Heading Element</b> - <code>&lt;H1&gt;</code> <code>&lt;H2&gt;</code> <code>&lt;H3&gt;</code> <code>&lt;H4&gt;</code> <code>&lt;H5&gt;</code> <code>&lt;H6&gt;</code>
+							<li><b>Paragraph Element</b> - <code>&lt;P&gt;</code> </li>
+							<li><b>List Element</b> - <code>&lt;ul&gt;</code> <code>&lt;ol&gt;</code> <code>&lt;li&gt;</code></li>
+							<li><b>Image Element</b> - <code>&lt;img&gt;</code></li>
+							<li><b>line breaks</b> - <code>&lt;br&gt;</code></li>
+							<li><b>Anchor</b> (hyperlink) - <code>&lt;a&gt;</code></li>
 							</ul>	
         </ul>
       </section>
    
       <section class="card" id="css-section">
         <h2>CSS</h2>
-				<p>Cascading Style Sheets</p>
-				<p>The Language used to describe the presentation of a website that was created with HTML and how each element on a webpage is rendered.</p>
+        <br>
         <ul>
+					<li>Cascading Style Sheets</li>
+					<li>The Language used to describe the presentation of a website that was created with HTML and how each element on a webpage is rendered.</li>
 					<li>CSS describes the presentation of a website created with HTML</li>
 					<li>CSS describes how each element on a webpage is rendered</li>
-					</ul> 
+          <li>A margin indicates how much space we want around the outside of an element.</li>
+					<li>A padding indicates how much space we want around the content inside an element.</li>
+					</ul>
       </section>
    
       <section class="card" id="git-section">
         <h2>Git</h2>
+        <br>
         <ul>
           <li>A free open source version conttrol system that allows collaboration without overwriting</li>
           <li>It allows developers to revert to an older version of the code if an error happens</li>
+          <li><code>git status</code> checks which branch we are currently working on</li>
+          <li><code>git checkout -branch-name</code> creates a new branch and switches to it</li>
         </ul> 
       </section>
    
       <section class="card" id="javascript-section">
-        <h2>Git</h2>
+        <h2>JavaScript</h2>
+        <br>
         <ul>
-          <li>A free open source version conttrol system that allows collaboration without overwriting</li>
-          <li>It allows developers to revert to an older version of the code if an error happens</li>
+          <li>A lightweight programming language used to provide logic and interactivity for websites</li>
         </ul> 
       </section>
     </main>
