changes made to script.JS and HTML file for Prework Study Guide project

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 					<li>Hyper Text Markup Language</li>
 					<li>HTML is the basic building blocks of websites</li>
 					<li>It is made up of elements to provide content and the basic framework of all pages on the web</li>
-					<li>!DOCTYPE is a declaration that tell the browser what type of document it should expect when it is opened.</li>
-					<li> HTML Attributes are always defined at the beginning. They define additional information about elements.</li>
+					<li>!DOCTYPE is a declaration that tell the browser what type of document it should expect when it is opened</li>
+					<li> HTML Attributes are always defined at the beginning. They define additional information about elements</li>
 			  </ul>
         <br>
 				<h3>Elements</h3>
@@ -31,7 +31,7 @@
 	          <ul>
 						<li>Sample metadata tags include: <code>&lt;title&gt;</code> <code>&lt;style&gt;</code> <code>&lt;base&gt;</code> <code>&lt;link&gt;</code> <code>&lt;meta&gt;</code> <code>&lt;script&gt;</code></li>
 						</ul>
-					<li>The <code>&lt;body&gt;</code> element contains the content that is shown to a user.</li>
+					<li>The <code>&lt;body&gt;</code> element contains the content that is shown to a user</li>
 						<ul>
 						<li>Elements contained inside <code>&lt;body&gt;</code> include:</li>
 							<ul>
@@ -50,11 +50,11 @@
         <br>
         <ul>
 					<li>Cascading Style Sheets</li>
-					<li>The Language used to describe the presentation of a website that was created with HTML and how each element on a webpage is rendered.</li>
+					<li>The Language used to describe the presentation of a website that was created with HTML and how each element on a webpage is rendered</li>
 					<li>CSS describes the presentation of a website created with HTML</li>
 					<li>CSS describes how each element on a webpage is rendered</li>
-          <li>A margin indicates how much space we want around the outside of an element.</li>
-					<li>A padding indicates how much space we want around the content inside an element.</li>
+          <li>A margin indicates how much space we want around the outside of an element</li>
+					<li>A padding indicates how much space we want around the content inside an element</li>
 					</ul>
       </section>
    
@@ -74,6 +74,9 @@
         <br>
         <ul>
           <li>A lightweight programming language used to provide logic and interactivity for websites</li>
+					<li>A variable is a named container that allows us to store data in our code</li>
+					<li>Control flow is the order in which a computer executes code in a script</li>
+					<li>Each line of Javascript code ends with a semicolon <code>;<code></li>          
         </ul> 
       </section>
     </main>
