--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <li>A lightweight programming language used to provide logic and interactivity for websites</li>
 					<li>A variable is a named container that allows us to store data in our code</li>
 					<li>Control flow is the order in which a computer executes code in a script</li>
-					<li>Each line of Javascript code ends with a semicolon <code>;<code></li>          
+					<li>Each line of Javascript code ends with a semicolon <code>;<code></code></li>          
         </ul> 
       </section>
     </main>
